Fix double scrollbar bug on desktop

--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body,
 html {
     height: 100%;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 body {
